# ASPEN_GUI_LESS

./: .gitignore  CMakeLists.txt
Apps/BenchmarkICP/: CMakeLists.txt  main.cpp
Apps/DebugArma/: CMakeLists.txt  main  main.cpp
Apps/DebugBundleAdjuster/: CMakeLists.txt  main.cpp  master_script.py
Apps/DebugOMP/: CMakeLists.txt  main.cpp
Apps/IOD/: CMakeLists.txt  main.cpp  master_script.py
Apps/Navigation/: CMakeLists.txt  main.cpp  master_script.py  retrieve_filter_results.sh  retrieve_results.sh
Apps/Navigation/input/: fit_shape_aligned.b  fit_source_400.b  itokawa_64_scaled_aligned_bezier_1.b
Apps/PatchFitting/: CMakeLists.txt  main.cpp  plots.py
Apps/PatchFitting/input/: true_patch.b  true_patch_1.b
Apps/RayTracing/: CMakeLists.txt  main.cpp
Apps/ShapeModelBezier/: CMakeLists.txt  main.cpp
Apps/ShapeReconstruction/: CMakeLists.txt  extract_results_from_log.py  input_file.json  keep_track_of_mem_usage.sh  main.cpp  master_script.py  plot_coverage.py  retrieve_coverage_pcs.sh  retrieve_fit_shape.sh  retrieve_input_files.sh  retrieve_logs.sh  retrieve_results.sh  retrieve_trajectories.sh
Apps/ShapeUncertainty/: CMakeLists.txt  main.cpp  master_script.py  retrieve_results.sh
Apps/TestBSpline/: main.cpp
Apps/TestBatchAttitude/: main.cpp
Apps/TestBezier/: CMakeLists.txt  main.cpp
Apps/TestBezier/input/: cube.b  patch.b
Apps/TestCGALInterface/: main.cpp
Apps/TestFilter/: CMakeLists.txt  main.cpp
Apps/TestForceModels/: main.cpp  plotting.py
Apps/TestICP/: CMakeLists.txt  destination.txt  main.cpp  source.txt
Apps/TestIndices/: CMakeLists.txt  main.cpp
Apps/TestKDTreeSimple/: CMakeLists.txt  main.cpp
Apps/TestODEint/: main.cpp
Apps/TestPartials/: CMakeLists.txt  main.cpp  plotting.py
Apps/TestShapeFitter/: CMakeLists.txt  main.cpp
Apps/Uncertainty/: CMakeLists.txt  main.cpp  plotting.py
gravity/: itokawa_150_Cnm_n10_r175.txt  itokawa_150_Cnm_n2_r175.txt  itokawa_150_Cnm_n5_r175.txt  itokawa_150_Snm_n10_r175.txt  itokawa_150_Snm_n2_r175.txt  itokawa_150_Snm_n5_r175.txt
include/: .ShapeModel.hpp.swp  Args.hpp  BBox.hpp  Bezier.hpp  Constants.hpp  ControlPoint.hpp  DynamicAnalyses.hpp  Edge.hpp  Element.hpp  Facet.hpp  Filter.hpp  FilterArguments.hpp  ICP.hpp  ICPException.hpp  Interpolator.hpp  KDNode.hpp  KDTree_Shape.hpp  KDTree_control_points.hpp  KDTree_facet.hpp  KDTree_pc.hpp  Lidar.hpp  OMP_flags.hpp  PC.hpp  PointNormal.hpp  RK.hpp  RK4.hpp  Ray.hpp  RefFrame.hpp  RigidBodyKinematics.hpp  ShapeFitter.hpp  ShapeModel.hpp  ShapeModelBezier.hpp  ShapeModelImporter.hpp  ShapeModelTri.hpp  Vertex.hpp  Wrappers.hpp
lib/: ASPENConfig.cmake  CMakeLists.txt
lib/cmake/: ASPENConfig.cmake
lib/include/: .ICP_old.hpp  .KDTreePC_old.hpp  .PC_old.hpp  .ShapeModel.hpp.swp  Adjacency_List.hpp  Args.hpp  BBox.hpp  BSpline.hpp  BatchAttitude.hpp  BatchFilter.hpp  Bezier.hpp  BezierCMIntegral.hpp  BezierVolumeIntegral.hpp  BundleAdjuster.hpp  Constants.hpp  ControlPoint.hpp  CustomException.hpp  CustomReductions.hpp  DebugFlags.hpp  DynamicAnalyses.hpp  Dynamics.hpp  Element.hpp  EllipsoidFitter.hpp  EstimateNormals.hpp  EstimationFPFH.hpp  EstimationFeature.hpp  EstimationNormals.hpp  EstimationPFH.hpp  EventFunction.hpp  ExtendedKalmanFilter.hpp  FPFH.hpp  Facet.hpp  FeatureMatching.hpp  Filter.hpp  FilterArguments.hpp  FixVectorSize.hpp  FlyOverMap.hpp  Footpoint.hpp  FrameGraph.hpp  ICP.hpp  (+46 more)
lib/source/: .KDTreePC_old.cpp  .PC_old.cpp  BBox.cpp  BSpline.cpp  BatchAttitude.cpp  BatchFilter.cpp  Bezier.cpp  BundleAdjuster.cpp  ControlPoint.cpp  DynamicAnalyses.cpp  Dynamics.cpp  Element.cpp  EllipsoidFitter.cpp  EstimateNormals.cpp  EstimationFPFH.cpp  EstimationFeature.cpp  EstimationNormals.cpp  EstimationPFH.cpp  EventFunction.cpp  ExtendedKalmanFilter.cpp  FPFH.cpp  Facet.cpp  FeatureMatching.cpp  Filter.cpp  FlyOverMap.cpp  FrameGraph.cpp  ICP.cpp  ICPBase.cpp  IODFinder.cpp  IterativeClosestPoint.cpp  IterativeClosestPointToPlane.cpp  KDTree.cpp  KDTreeControlPoints.cpp  KDTreeDescriptors.cpp  KDTreePC.cpp  KDTreeShape.cpp  KDTree_control_points.cpp  KDTree_pc.cpp  KDTree_shape.cpp  Lidar.cpp  (+24 more)
python/: IOD_results_plots.py  RigidBodyKinematics.py  adjacency.py  berstein_integral.py  bundle_adjustment_debug.py  debug_IOD.py  debug_ba_partials.py  draw_slice.py  io_import_multiple_objs.py  np_array_to_latex.py  plot_descriptors.py  plot_filter_results.py  plot_lidar.py  plot_long_lat_map.py  plot_rt_uncertainties.py  plotting_bspline.py  pointing_error.asy  polyhedron.py  shape_uncertainty_plots.py  shape_uncertainty_results_plots.py  test_beta.py  test_intersect.py  test_mayavi.py  utils.py
source/: BBox.cpp  Bezier.cpp  ControlPoint.cpp  DynamicAnalyses.cpp  Edge.cpp  Element.cpp  Facet.cpp  Filter.cpp  ICP.cpp  Interpolator.cpp  KDNode.cpp  KDTree_Shape.cpp  KDTree_control_points.cpp  KDTree_facet.cpp  KDTree_pc.cpp  Lidar.cpp  PC.cpp  PointNormal.cpp  RK.cpp  RK4.cpp  Ray.cpp  RefFrame.cpp  RigidBodyKinematics.cpp  ShapeFitter.cpp  ShapeModel.cpp  ShapeModelBezier.cpp  ShapeModelImporter.cpp  ShapeModelTri.cpp  Vertex.cpp  Wrappers.cpp  main.cpp
tests/validation_lidar/: main.cpp
tests/validation_ref_frames/: main.cpp
